# pretty-text

./: README.md  example.py  pyproject.toml
pretty_text/: __init__.py  pretty.py
tests/: test_pretty_text.py
