[tool.poetry]
name = "pretty_text"
version = "0.1.1"
description = "Add font and color to your Python text."
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
repository = 'https://github.com/khuyentran1401/pretty_text'
readme = 'README.md'
keywords = ['text']

[tool.poetry.dependencies]
python = "^3.7"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
